# intellapi

./: .gitignore  LICENSE  README.md  pyproject.toml
src/intellapi/: __init__.py  __main__.py  cli.py  config.py  openapi.py  privacy.py  utils.py
src/intellapi/generator/: __init__.py  pipeline.py  renderer.py
src/intellapi/llm/: client.py  prompts.py  schemas.py
src/intellapi/providers/: anthropic_native.py  base.py  bedrock_native.py  openai_compatible.py
src/intellapi/scanner/: __init__.py  base_extractor.py  file_discovery.py  framework_detector.py  ir.py  node_extractor.py  python_extractor.py
src/intellapi/templates/: documentation.md.j2  documentation.txt.j2
tests/: test_cli.py  test_config.py  test_framework_detector.py  test_node_extractor.py  test_pipeline.py  test_privacy.py  test_python_extractor.py  test_renderer.py
tests/fixtures/sample_django_rest/: urls.py  views.py
tests/fixtures/sample_django_rest_router/: urls.py  views.py
tests/fixtures/sample_express/: app.js  package.json
tests/fixtures/sample_fastapi/: API_DOCUMENTATION.md  main.py
tests/fixtures/sample_fastapi_advanced/: main.py
tests/fixtures/sample_flask/: app.py
tests/fixtures/sample_flask_late_prefix/: app.py
tests/fixtures/sample_nextjs/: package.json  tsconfig.json
tests/fixtures/sample_nextjs/app/api/users/: route.ts
tests/fixtures/sample_nextjs_pages/: package.json
tests/fixtures/sample_nextjs_pages/pages/api/orders/: [orderId].ts
tests/fixtures/sample_sveltekit/: package.json  tsconfig.json
tests/fixtures/sample_sveltekit/src/routes/api/posts/[slug]/: +server.ts
